--- a/CKAN-Modernization-20250721/ckan-monorepo/ckan/ckan/templates/user/dashboard.html
+++ b/CKAN-Modernization-20250721/ckan-monorepo/ckan/ckan/templates/user/dashboard.html
@@ -25,12 +25,8 @@
             {{ h.build_nav_icon('dashboard.datasets', h.humanize_entity_type('package', dataset_type, 'my label') or _('My Datasets'), icon='sitemap') }}
             {{ h.build_nav_icon('dashboard.organizations', h.humanize_entity_type('organization', org_type, 'my label') or _('My Organizations'), icon='building') }}
             {{ h.build_nav_icon('dashboard.groups', h.humanize_entity_type('group', group_type, 'my label') or _('My Groups'), icon='users') }}
-            {% if h.check_access('sysadmin') %}
-              <li class="nav-item">
-                <a class="nav-link" href="/dashboard/analytics">
-                  <i class="fa fa-bar-chart"></i> Analytics
-                </a>
-              </li>
+            {% if c.userobj %}
+              {{ h.build_nav_icon('dashboard.analytics', _('Analytics'), icon='bar-chart') }}
             {% endif %}
           {% endblock dashboard_nav_links %}
         </ul>
